1. 新增查询映射自定义枚举的demo 2. 优化代码

--- a/crc/main/resource/jdbc.properties
+++ b/crc/main/resource/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/test_mybatis?characterEncoding=utf8&allowMultiQueries=true
+jdbc.url=jdbc:mysql://localhost:3307/demo_mybatis?characterEncoding=utf8&allowMultiQueries=true
 jdbc.username=root
 jdbc.password=root
 jdbc.poolMaximumActiveConnections=10
